[gd_scene load_steps=17 format=2]

[ext_resource path="res://niveis/Game.gd" type="Script" id=1]
[ext_resource path="res://niveis/teste/Sprite-0001.png" type="Texture" id=2]
[ext_resource path="res://niveis/teste/Sprite-0002.png" type="Texture" id=3]
[ext_resource path="res://niveis/teste/Spawner.gd" type="Script" id=4]
[ext_resource path="res://niveis/teste/VisibilityNotifier2D.gd" type="Script" id=5]
[ext_resource path="res://personagens/inimigo_teste/InimigoTeste.tscn" type="PackedScene" id=6]
[ext_resource path="res://personagens/personagem_teste/PersonagemTeste.tscn" type="PackedScene" id=7]
[ext_resource path="res://niveis/teste/Panel.gd" type="Script" id=8]
[ext_resource path="res://American Captain.ttf" type="DynamicFontData" id=9]

[sub_resource type="GDScript" id=1]

script/source = "extends Node

func _on_PersonagemCompartilhado_nivel_changed(valor):
	#var particula = Utils.create_object(null,owner)
	pass # Replace with function body.


func _on_HP_cura(valor):
	pass # Replace with function body.


func _on_HurtBox_dano_normal(value1):
	var particula = Utils.create_object(load(\"res://outros/particulas/Vida/ParticulaHP.tscn\"),owner)
	particula.start(value1)


func _on_HurtBox_dano_critico(value):
	pass # Replace with function body.
"

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 1520, 23.58 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 32, 208 )

[sub_resource type="StyleBoxFlat" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.713726, 0.00392157, 0.843137, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.145098, 0.807843, 0.819608, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="DynamicFont" id=6]

size = 16
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font" ]

[sub_resource type="DynamicFont" id=7]

size = 16
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Extra Spacing", "Font" ]

[node name="Teste" type="Node"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="Node" parent="."]
editor/display_folded = true

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( -806.529, 798.928 )
scale = Vector2( 5.50767, 6.83783 )
texture = ExtResource( 2 )
offset = Vector2( 46.8074, -57.3027 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground"]
position = Vector2( -1698.58, 1186.65 )
scale = Vector2( 10.0518, 15.3835 )
texture = ExtResource( 2 )
offset = Vector2( 46.8074, -57.3027 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground"]
position = Vector2( -1270.56, 1629.57 )
scale = Vector2( 10.0518, 15.3835 )
texture = ExtResource( 2 )
offset = Vector2( 46.8074, -57.3027 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground"]
position = Vector2( -507.489, 1530.97 )
scale = Vector2( 4.01792, 15.448 )
texture = ExtResource( 2 )
offset = Vector2( 46.8074, -57.3027 )

[node name="Sprite5" type="Sprite" parent="ParallaxBackground"]
position = Vector2( -261.153, 1079.44 )
scale = Vector2( 2.71613, 9.39611 )
texture = ExtResource( 2 )
offset = Vector2( 46.8074, -57.3027 )

[node name="Sprite6" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 736.608, 769.468 )
scale = Vector2( 2.51991, 5.82015 )
texture = ExtResource( 2 )
offset = Vector2( 46.8074, -57.3027 )

[node name="Sprite7" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 828.138, 1048.15 )
scale = Vector2( 6.52398, 12.6131 )
texture = ExtResource( 2 )
offset = Vector2( 46.8074, -57.3027 )

[node name="Sprite8" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.921569, 0.368627, 0.333333, 1 )
position = Vector2( 1064.11, 395.495 )
scale = Vector2( 1.41589, 3.04442 )
texture = ExtResource( 3 )
offset = Vector2( 46.8074, -57.3027 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite14" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.145098, 0.807843, 0.819608, 1 )
position = Vector2( 975.65, 55.9884 )
scale = Vector2( 1.41589, 0.555934 )
texture = ExtResource( 3 )
offset = Vector2( 46.8074, -57.3027 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite16" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.145098, 0.807843, 0.819608, 1 )
position = Vector2( -379.834, 298.604 )
scale = Vector2( 1.41589, 0.555934 )
texture = ExtResource( 3 )
offset = Vector2( 46.8074, -57.3027 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite17" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.145098, 0.807843, 0.819608, 1 )
position = Vector2( -997.54, 332.121 )
scale = Vector2( 4.41886, 0.555934 )
texture = ExtResource( 3 )
offset = Vector2( 46.8074, -57.3027 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite20" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.145098, 0.807843, 0.819608, 1 )
position = Vector2( -1202.05, -28.0316 )
scale = Vector2( 1.41589, 1.26264 )
texture = ExtResource( 3 )
offset = Vector2( 46.8074, -57.3027 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite21" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.145098, 0.807843, 0.819608, 1 )
position = Vector2( -1406.6, 211.368 )
scale = Vector2( 2.02463, 1.26264 )
texture = ExtResource( 3 )
offset = Vector2( 46.8074, -57.3027 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite18" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.145098, 0.807843, 0.819608, 1 )
position = Vector2( -112.039, 291.956 )
scale = Vector2( 0.275586, 0.555934 )
texture = ExtResource( 3 )
offset = Vector2( 46.8074, -57.3027 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite19" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.145098, 0.807843, 0.819608, 1 )
position = Vector2( -184.061, 291.956 )
scale = Vector2( 0.275586, 0.555934 )
texture = ExtResource( 3 )
offset = Vector2( 46.8074, -57.3027 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite15" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.145098, 0.807843, 0.819608, 1 )
position = Vector2( 1194.67, 58.7092 )
scale = Vector2( 1.41589, 0.555934 )
texture = ExtResource( 3 )
offset = Vector2( 46.8074, -57.3027 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite10" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.921569, 0.368627, 0.333333, 1 )
position = Vector2( -1404.6, 122.245 )
scale = Vector2( 1.41589, 3.04442 )
texture = ExtResource( 3 )
offset = Vector2( 46.8074, -57.3027 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite11" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.921569, 0.368627, 0.333333, 1 )
position = Vector2( -1184.13, 280.912 )
scale = Vector2( 1.41589, 3.04442 )
texture = ExtResource( 3 )
offset = Vector2( 46.8074, -57.3027 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite12" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.921569, 0.368627, 0.333333, 1 )
position = Vector2( -566.248, 573.812 )
scale = Vector2( 1.41589, 3.04442 )
texture = ExtResource( 3 )
offset = Vector2( 46.8074, -57.3027 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite13" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.921569, 0.368627, 0.333333, 1 )
position = Vector2( -386.109, 201.439 )
scale = Vector2( 0.781192, 0.666205 )
texture = ExtResource( 3 )
offset = Vector2( 46.8074, -57.3027 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite9" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.921569, 0.368627, 0.333333, 1 )
position = Vector2( 813.826, 283.449 )
scale = Vector2( 0.283813, 0.325281 )
texture = ExtResource( 3 )
offset = Vector2( 46.8074, -57.3027 )
_sections_unfolded = [ "Visibility" ]

[node name="Position2D" type="Position2D" parent="."]
editor/display_folded = true
position = Vector2( -5.26312, -40 )
script = ExtResource( 4 )
min_waitTime = 1.0
max_waitTime = 4.0

[node name="Timer" type="Timer" parent="Position2D"]
process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Position2D"]
position = Vector2( -752, 341.58 )
scale = Vector2( 6.1, 1 )
rect = Rect2( -10, -10, 20, 20 )
script = ExtResource( 5 )

[node name="VisibilityNotifier2D2" type="VisibilityNotifier2D" parent="Position2D"]
position = Vector2( -1024, 341.58 )
scale = Vector2( 6.1, 1 )
rect = Rect2( -10, -10, 20, 20 )
script = ExtResource( 5 )

[node name="VisibilityNotifier2D3" type="VisibilityNotifier2D" parent="Position2D"]
position = Vector2( -1264, 341.58 )
scale = Vector2( 6.1, 1 )
rect = Rect2( -10, -10, 20, 20 )
script = ExtResource( 5 )

[node name="VisibilityNotifier2D4" type="VisibilityNotifier2D" parent="Position2D"]
position = Vector2( -448, 341.58 )
scale = Vector2( 6.1, 1 )
rect = Rect2( -10, -10, 20, 20 )
script = ExtResource( 5 )

[node name="VisibilityNotifier2D5" type="VisibilityNotifier2D" parent="Position2D"]
position = Vector2( -3.75342, 341.58 )
scale = Vector2( 6.1, 1 )
rect = Rect2( -10, -10, 20, 20 )
script = ExtResource( 5 )

[node name="VisibilityNotifier2D6" type="VisibilityNotifier2D" parent="Position2D"]
position = Vector2( 448, 341.58 )
scale = Vector2( 6.1, 1 )
rect = Rect2( -10, -10, 20, 20 )
script = ExtResource( 5 )

[node name="VisibilityNotifier2D7" type="VisibilityNotifier2D" parent="Position2D"]
position = Vector2( 752, 341.58 )
scale = Vector2( 6.1, 1 )
rect = Rect2( -10, -10, 20, 20 )
script = ExtResource( 5 )

[node name="VisibilityNotifier2D8" type="VisibilityNotifier2D" parent="Position2D"]
position = Vector2( 1008, 341.58 )
scale = Vector2( 6.1, 1 )
rect = Rect2( -10, -10, 20, 20 )
script = ExtResource( 5 )

[node name="VisibilityNotifier2D9" type="VisibilityNotifier2D" parent="Position2D"]
position = Vector2( 1280, 341.58 )
scale = Vector2( 6.1, 1 )
rect = Rect2( -10, -10, 20, 20 )
script = ExtResource( 5 )

[node name="Node" type="Node" parent="."]

[node name="InimigoTeste" parent="." instance=ExtResource( 6 )]
position = Vector2( 275.278, 291.962 )
max_hp = 9
velocidade_base = 300

[node name="PersonagemTeste" parent="." instance=ExtResource( 7 )]
editor/display_folded = true
position = Vector2( -16.6785, 288.483 )
max_hp = 9
critico_base = 1
velocidade_base = 100
dano_base = 5.0

[node name="Camera2D" parent="PersonagemTeste" index="9"]
position = Vector2( 0, -80 )
limit_left = -1520
limit_top = -1000
limit_right = 1520
limit_bottom = 350
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true
_sections_unfolded = [ "Limit" ]

[node name="Particulas" parent="PersonagemTeste" index="12"]
script = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( -5.26312, -40 )
input_pickable = false
collision_layer = 5
collision_mask = 5
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
physics_material_override = null
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( 6.58996, 360 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( 0, -96 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( 1488, 128 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( -1488, 128 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 5.40183, 368.309 )
scale = Vector2( 69.1924, 1 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Sprite3" type="Sprite" parent="StaticBody2D"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( -1485.63, 312.96 )
scale = Vector2( 1, 1.0872 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility", "texture" ]

[node name="Sprite4" type="Sprite" parent="StaticBody2D"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 1493.85, 312.911 )
scale = Vector2( 1.26586, 1.0872 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility", "texture" ]

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 112.0
margin_top = 16.0
margin_right = 544.0
margin_bottom = 336.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 4 )
script = ExtResource( 8 )
_sections_unfolded = [ "Visibility", "custom_styles", "custom_styles/panel" ]

[node name="Panel" type="Panel" parent="Panel"]
modulate = Color( 0.145098, 0.807843, 0.819608, 1 )
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -27.0
margin_top = -11.0
margin_right = 437.0
margin_bottom = 325.0
rect_rotation = 4.24647
rect_pivot_offset = Vector2( 232, 192 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 5 )
_sections_unfolded = [ "Visibility", "custom_styles", "custom_styles/panel" ]

[node name="ScoreFinal" type="Label" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 219.0
margin_top = 64.0
margin_right = 259.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Nivel:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="TexoFinal" type="Label" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 121.0
margin_top = 45.0
margin_right = 298.0
margin_bottom = 99.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Querido Diario, 
hoje eu morri no
morri mas consegui 
talvez nao seja o necessario pra
completar a missao :(.
Deixo tudo que eu tenho para os meu familiares 
(nada)
Adeus mundo cruel..
xoxo Isaquias"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="Kills" type="Label" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 234.0
margin_top = 83.0
margin_right = 274.0
margin_bottom = 99.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Kills:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 240.0
margin_right = 170.0
margin_bottom = 260.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "RETrY"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="Button2" type="Button" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 240.0
margin_right = 336.0
margin_bottom = 262.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Menu"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[connection signal="show_final" from="." to="Panel" method="_on_Teste_show_final"]
[connection signal="timeout" from="Position2D/Timer" to="Position2D" method="_on_Timer_timeout"]
[connection signal="screen_entered" from="Position2D/VisibilityNotifier2D" to="Position2D/VisibilityNotifier2D" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="Position2D/VisibilityNotifier2D" to="Position2D/VisibilityNotifier2D" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_entered" from="Position2D/VisibilityNotifier2D2" to="Position2D/VisibilityNotifier2D2" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="Position2D/VisibilityNotifier2D2" to="Position2D/VisibilityNotifier2D2" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_entered" from="Position2D/VisibilityNotifier2D3" to="Position2D/VisibilityNotifier2D3" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="Position2D/VisibilityNotifier2D3" to="Position2D/VisibilityNotifier2D3" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_entered" from="Position2D/VisibilityNotifier2D4" to="Position2D/VisibilityNotifier2D4" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="Position2D/VisibilityNotifier2D4" to="Position2D/VisibilityNotifier2D4" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_entered" from="Position2D/VisibilityNotifier2D5" to="Position2D/VisibilityNotifier2D5" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="Position2D/VisibilityNotifier2D5" to="Position2D/VisibilityNotifier2D5" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_entered" from="Position2D/VisibilityNotifier2D6" to="Position2D/VisibilityNotifier2D6" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="Position2D/VisibilityNotifier2D6" to="Position2D/VisibilityNotifier2D6" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_entered" from="Position2D/VisibilityNotifier2D7" to="Position2D/VisibilityNotifier2D7" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="Position2D/VisibilityNotifier2D7" to="Position2D/VisibilityNotifier2D7" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_entered" from="Position2D/VisibilityNotifier2D8" to="Position2D/VisibilityNotifier2D8" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="Position2D/VisibilityNotifier2D8" to="Position2D/VisibilityNotifier2D8" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_entered" from="Position2D/VisibilityNotifier2D9" to="Position2D/VisibilityNotifier2D9" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="Position2D/VisibilityNotifier2D9" to="Position2D/VisibilityNotifier2D9" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="mudar_hp" from="PersonagemTeste/HP" to="PersonagemTeste/InterFace" method="_on_HP_mudar_hp"]
[connection signal="game_end" from="PersonagemTeste/Estados/Morto" to="." method="_on_Morto_game_end"]
[connection signal="focus_entered" from="Panel/Button" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="Panel/Button" to="Panel" method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="focus_entered" from="Panel/Button2" to="." method="_on_Button2_focus_entered"]
[connection signal="pressed" from="Panel/Button2" to="Panel" method="_on_Button2_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_Button2_pressed"]

[editable path="PersonagemTeste"]
